openshift/base/pki-cert-client/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pki-cert-client
  labels:
    app: pki-cert-client
spec:
  selector:
    app: pki-cert-client
  ports:
    - name: http
      port: 8080
      targetPort: http
