openshift/base/pki-cert-client/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: pki-cert-client
spec:
  to:
    kind: Service
    name: pki-cert-client
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
